[tool.poetry]
name = "pyrosimple"
version = "1.2.0"
description = ""
authors = ["kannibalox <kannibalox@gmail.com>"]
repository = "https://github.com/kannibalox/pyrosimple"
readme = "README.md"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Environment :: Console",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Communications :: File Sharing",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
Tempita = "^0.5.2"
"bencode.py" = "^4.0.0"
APScheduler = {version = "^3.9.0", optional = true}
pyinotify = {version = "^0.9.6", optional = true}
Jinja2 = {version = "^3.0.3", optional = true}
python-daemon = "^2.3.0"

[tool.poetry.extras]
torque = ["APScheduler", "pyinotify"]

[tool.poetry.scripts]
rtxmlrpc = "pyrosimple.scripts.rtxmlrpc:run"
rtcontrol = "pyrosimple.scripts.rtcontrol:run"
lstor = "pyrosimple.scripts.lstor:run"
chtor = "pyrosimple.scripts.chtor:run"
mktor = "pyrosimple.scripts.mktor:run"
pyrotorque = "pyrosimple.scripts.pyrotorque:run"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pylint = "^2.12.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
[tool.pylint.'MESSAGES CONTROL']
disable="locally-disabled, bad-continuation, superfluous-parens, no-else-return, too-many-arguments,logging-not-lazy, logging-format-interpolation, too-few-public-methods, protected-access, duplicate-code, consider-using-f-string, fixme, invalid-name, line-too-long"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    'pyroadmin\.py$',
    '/data/'
]
